--- a/elements/headline/headline.scss
+++ b/elements/headline/headline.scss
@@ -48,7 +48,7 @@ headline {
             padding: 0 0 em(11) 0;
         }
         &[density="compact"] {
-            padding: em(5) 0 em(8) 0;
+            padding: em(15) 0 em(8) 0;
             display: block;
             border-bottom: 1px solid $grey-color-60;
             margin: em(10) 0;
